# Geant4_LAr_NBrS

./: .gdbinit  .gitignore  CMakeLists.txt  Compile.sh  GenEclipseProject.sh  Readme.md  Readme.txt  RunSimulation.sh  TODO.txt  modify_all_settings.py  settings_all_parameters.xml  vis.mac
data/LAr_XS/: S(eps)_Yarnell73.txt  Structure_factor_Yarnell73.txt  XS_energy_transfer.txt  XS_energy_transfer_Atrazhev85.txt  XS_energy_transfer_Atrazhev_AvgS_Avgmu_AvgXS.txt  XS_energy_transfer_Atrazhev_AvgS_Avgmu_B8.9.txt  XS_energy_transfer_Atrazhev_AvgS_Avgmu_B8.9_sh.txt  XS_energy_transfer_Atrazhev_AvgS_Avgmu_McE14.txt  XS_energy_transfer_Atrazhev_AvgS_Avgmu_McE14_sh.txt  XS_energy_transfer_Borisova.txt  XS_energy_transfer_Borisova_corrected.txt  XS_energy_transfer_Boyle15.txt  XS_energy_transfer_Boyle15_Y73.txt  XS_energy_transfer_Var1.txt  XS_energy_transfer_Var10.txt  XS_energy_transfer_Var2.txt  XS_energy_transfer_Var3.txt  XS_energy_transfer_Var4.txt  XS_energy_transfer_Var5.txt  XS_energy_transfer_Var6.txt  XS_energy_transfer_Var7.txt  XS_energy_transfer_Var8.txt  XS_energy_transfer_Var9.txt  XS_momentum_transfer.txt  XS_momentum_transfer_Atrazhev85.txt  XS_momentum_transfer_Atrazhev_AvgS_Avgmu_AvgXS.txt  XS_momentum_transfer_Atrazhev_AvgS_Avgmu_B8.9.txt  XS_momentum_transfer_Atrazhev_AvgS_Avgmu_B8.9_sh.txt  XS_momentum_transfer_Atrazhev_AvgS_Avgmu_McE14.txt  XS_momentum_transfer_Atrazhev_AvgS_Avgmu_McE14_sh.txt  XS_momentum_transfer_Borisova.txt  XS_momentum_transfer_Borisova_corrected.txt  XS_momentum_transfer_Boyle15.txt  XS_momentum_transfer_Boyle15_Y73.txt  XS_momentum_transfer_Var1.txt  XS_momentum_transfer_Var10.txt  XS_momentum_transfer_Var2.txt  XS_momentum_transfer_Var3.txt  XS_momentum_transfer_Var4.txt  XS_momentum_transfer_Var5.txt  (+12 more)
data/LAr_drift/: LAr_diffusionL_data.txt  LAr_diffusionT_data.txt  LAr_drift_velocity_data.txt
data/LKr_XS/: S(eps)_Borisova.txt  XS_energy_transfer_Borisova.txt  XS_momentum_transfer_Borisova.txt
data/LXe_XS/: S(eps)_Borisova.txt  XS_energy_transfer_Borisova.txt  XS_momentum_transfer_Borisova.txt
data/absorption_length/: PMMA.xlsx  build_abs_length.py  calib.xlsx
data/energy_spectrum/: calib GAr NIR.xlsx
data/nonprop/: calib.xlsx
data/quantum_efficiency/: S13360-6050_PDE.opj  calib s13360-6050pe.xlsx
data/reflectivity/: Cu_data.opj
include/: ArgonPropertiesTables.hh  DetectorConstruction.hh  DetectorConstructionTHGEM1.hh  DetectorConstructionTHGEM1Shading.hh  DetectorFull.hh  DetectorParameterisation.hh  DetectorSensor.hh  DetectorTHGEM1SiPMshading.hh  DetectorTHGEM1detailed.hh  Detector_THGEM1_SiPM_shading.hh  Detector_THGEM1_detailed.hh  Detector_full.hh  DriftElectron.hh  DriftMedium.hh  FieldElmerMap.hh  FunctionTable.hh  GenElectronsPatterns.hh  GenNBrS_InTHGEM.hh  GenPhotonsDirectly.hh  GlobalData.hh  GlobalParameters.hh  GlobalUtilities.hh  HexagonalMapping.hh  IntegrationInterval.hh  KillProcess.hh  KryptonPropertiesTables.hh  MediumPropertiesTables.hh  PhotonHit.hh  PhysicsList.hh  PolynomialFit.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  PrimaryParticleUserInfo.hh  Run.hh  RunAction.hh  SteppingAction.hh  TeleportationProcess.hh  TrackUserInfo.hh  TrackingAction.hh  UserInitialization.hh  (+3 more)
include/field_drift/: DriftElectron.hh  DriftMedium.hh  FieldElmerMap.hh  TetrahedralTree.hh
include/geant4/: CleanerWorkerRunManager.hh  DetectorSensor.hh  HexagonalMapping.hh  KillProcess.hh  MappingManager.hh  PhysicsList.hh  PrimaryParticleUserInfo.hh  Run.hh  RunAction.hh  SteppingAction.hh  TeleportationProcess.hh  TrackUserInfo.hh  TrackingAction.hh  UserInitialization.hh
include/utilities/: DenseObserver.hpp  FindBoundsContainer.hpp  FunctionTable.hh  GlobalUtilities.hh  IntegrationConditional.hh  IntegrationInterval.hh  PolynomialFit.hh
results/pretty_pictures/: SolveFields.py  case_template.sif
results/v10.0_elastic/: settings_template.xml
results/v10.0_new_calculations/: settings_test.xml
results/v10_old_setup/: SolveFields.py  SolveFields_T7_MSH.py  v00.02_THGEM1.geo
results/v11_setup_y2022/: SolveFields.py  SolveFields.sh  case_template.sif  v00.01_THGEM0.geo
results/v11_test_elastic/: settings_6180V.xml
results/v12_THGEM1_BoyleXS/: v00.01_THGEM1.geo
results/v13_THGEM1_corrected_S/: SolveFields.py
results/v14_THGEM1_MyXSs/: v00.01_THGEM1.geo
results/v15_GEM1/: SolveFields.py  SolveFields_T7_MSH.py  case_template.sif  v00.01_GEM1.geo  v00.02_GEM1.geo
results/v16_old_setup_via_new_class/: v00.01_THGEM1.geo
results/v8/: settings_template.xml
results/v8.1_no_diff/: settings_template.xml
results/with_diffusion/: settings_6180V.xml
root_scripts/: e_track.sc  init.cpp  plot_Npe_spectrum.cpp  plot_results.cpp  print_Npe_vs_V.cpp  transparency.sc
scripts/: init.cpp  plot_Npe_profile.cpp  plot_Npe_spectrum.cpp  plot_results.cpp  print_Npe_vs_V.cpp  print_profile_vs_V.cpp  print_results_table.cpp  transparency.sc
scripts/Garfield_PP_viewer/: AvalancheMC_My.cc  AvalancheMC_My.hh  Cell_v00  Cell_v00.cc  Mat_Vd_const.cc  Mat_Vd_const.hh  makefile
singleTHGEM28_LAr/: PrepareSif.sh  SolveFields.sh  case_template.sif  readme.txt  v00.01_THGEM1.geo
singleTHGEM28_LAr/Elmer_v00.01/: case_v01.sif
source/: ArgonPropertiesTables.cc  CleanerWorkerRunManager.cc  DetectorConstruction.cc  DetectorConstructionTHGEM1.cc  DetectorConstructionTHGEM1Shading.cc  DetectorFull.cc  DetectorParametrisation.cc  DetectorSensor.cc  DetectorTHGEM1SiPMshading.cc  DetectorTHGEM1detailed.cc  Detector_THGEM1_SiPM_shading.cc  Detector_THGEM1_detailed.cc  Detector_full.cc  DriftElectron.cc  DriftMedium.cc  FieldElmerMap.cc  FunctionTable.cc  GenElectronPattern.cc  GenNBrS_InTHGEM.cc  GenPhotonsDirectly.cc  GlobalData.cc  GlobalParameters.cc  GlobalUtilities.cc  HexagonalMapping.cc  IntegrationInterval.cc  KillProcess.cc  KryptonPropertiesTables.cc  MediumPropertiesTables.cc  PhotonHit.cc  PhysicsList.cc  PolynomialFit.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TeleportationProcess.cc  TrackUserInfo.cc  TrackingAction.cc  UserInitialization.cc  (+4 more)
source/geant4/: Run.cc  (+13 more)
(+140 files in other folders)
